--- a/docs/static/css/index.css
+++ b/docs/static/css/index.css
@@ -286,6 +286,14 @@ body {
   position: absolute;
 }
 
+.hyper-grid-rgb-debug {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  position: absolute;
+}
+
 .hyper-grid-rgb-shape {
   width: 100%;
   height: 100%;
@@ -301,9 +309,16 @@ body {
   max-width: none !important;
 }
 
+.hyper-grid-rgb-debug img {
+  position: relative;
+  height: 100%;
+  width: 70%;
+  max-width: none !important;
+}
+
 .hyper-grid-rgb-shape img {
   position: relative;
-  height: 1100%;
-  width: 1100%;
+  height: 2100%;
+  width: 2100%;
   max-width: none !important;
 }
